[tool.poetry]
name = "reactome-chatbot"
version = "0.1.0"
description = "Chatbot for reactome's data portal"
authors = ["Helia Mohammadi <hmohammadi@oicr.on.ca>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.9"
openai = "^1.12.0"
chromadb = "^0.4.24"
pandas = "^2.2.1"
pyasn1 = "^0.5.1"
langchain-openai = "^0.0.8"
neo4j = "4.3.6"
spacy = "^3.7.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.0.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
