[tool.poetry]
name = "reactome-chatbot"
version = "0.1.0"
description = "Chatbot for reactome's data portal"
authors = ["Helia Mohammadi <hmohammadi@oicr.on.ca>"]
license = "Apache2"
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.9"
openai = "^1.12.0"
chromadb = "^0.4.24"
pandas = "^2.2.1"
pyasn1 = "^0.5.1"
langchain-openai = "^0.0.8"
neo4j = "4.3.6"
lark = "^1.1.9"
python-dotenv = "^1.0.1"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"
pyfiglet = "^1.0.2"
chainlit = "^1.0.504"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.0.2"
mypy = "^1.8.0"
pandas-stubs = "^2.2.1.240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
