[tool.poetry]
name = "reactome-chatbot"
version = "0.1.0"
description = "Chatbot for reactome's data portal"
authors = ["Helia Mohammadi <hmohammadi@oicr.on.ca>",
           "Adam Wright <awright@oicr.on.ca>",
           "Greg Hogue <ghogue@oicr.on.ca>"]
license = "Apache2"
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

#lark is needed for langchain -> SelfQueryRetriever
[tool.poetry.dependencies]
python = ">=3.10, <=3.12.3"
langchain = "^0.3.4"
openai = "^1.12.0"
chromadb = "^0.5.16"
pandas = "^2.2.1"
pyasn1 = "^0.5.1"
langchain-openai = "^0.2.3"
neo4j = "4.3.6"
python-dotenv = "^1.0.1"
pyfiglet = "^1.0.2"
chainlit = "^1.3.1"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.30"
langchain-community = "^0.3.3"
langchain-core = "^0.3.13"
langchain-huggingface = "^0.1.0"
einops = "^0.8.0"
boto3 = "^1.34.148"
torch = {version = "^2.4.0+cpu", source = "pytorch_cpu"}
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.2.0"
lark = "^1.2.2"
langgraph = "^0.2.39"
langgraph-checkpoint-postgres = "^2.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
pandas-stubs = "^2.2.3.241009"
types-requests = "^2.32.0.20241016"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
